--- a/index.html
+++ b/index.html
@@ -765,12 +765,11 @@ async function callSecureGeminiViaMake(prompt, base64File) {
                 const base64File = await fileToBase64(file); 
 
                 const prompt = `
-const prompt = `
+const prompt = const prompt = `
 You are a highly specialized AI assistant for real estate professionals.
 Analyze the uploaded real estate contract PDF and extract key data.
 
-Please return a response in **valid JSON**, exactly in this format:
-
+Return only valid JSON like this:
 {
   "propertyAddress": "123 Main St, Anytown, ST 12345",
   "summary": "This is a purchase agreement between John Doe (Buyer) and Jane Smith (Seller)...",
@@ -779,11 +778,9 @@ Please return a response in **valid JSON**, exactly in this format:
     { "name": "Closing Date", "date": "YYYY-MM-DD" }
   ]
 }
-
-- Do NOT include any commentary, markdown, or formatting.
-- If a value is not found, use an empty string or omit it.
-- Make sure your JSON is valid — no trailing commas or unescaped characters.
+Do NOT include commentary or formatting. Just return valid JSON. If data is missing, use an empty string.
 `;
+;
 ;
 
                 showStatus('Sending contract to AI for analysis... This may take a moment.', 'info');
