--- a/index.html
+++ b/index.html
@@ -708,11 +708,7 @@ Do NOT include commentary or formatting. Just return valid JSON. If data is miss
 
     feather.replace();
 });
-<script src="script.js"></script>
 
-</body>
-</html>
-
-</body>
+<script src="script.js"></script></body>
 </html>
  
