--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
             <div class="card results-section" id="emailSection">
                 <h3 class="flex items-center"><i data-feather="mail" class="mr-2"></i>Generated Client Email</h3>
-                <textarea id="emailPreview" class="textarea" rows="15" readonly></textarea>
+                <textarea id="emailPreview" class="textarea" rows="15"></textarea>
                 <button id="copyEmailButton" class="button mt-2">
                     <i data-feather="copy" class="feather"></i> Copy Email
                 </button>
@@ -650,11 +650,26 @@ document.addEventListener('DOMContentLoaded', () => {
 
     // --- Other Event Listeners ---
     copyEmailButton.addEventListener('click', () => {
+        // Use the older `document.execCommand` for better compatibility in iFrames
         emailPreviewEl.select();
-        emailPreviewEl.setSelectionRange(0, 99999);
-        navigator.clipboard.writeText(emailPreviewEl.value).then(() => {
-            showStatus("Copied to clipboard!", "success", 2000);
-        }).catch(err => {
-            console.error('Failed to copy text: ', err);
+        emailPreviewEl.setSelectionRange(0, 99999); // For mobile devices
+        try {
+            const successful = document.execCommand('copy');
+            if (successful) {
+                showStatus("Copied to clipboard!", "success", 2000);
+            } else {
+                showStatus("Could not copy text.", "error", 3000);
+            }
+        } catch (err) {
+            console.error('Fallback copy failed: ', err);
             showStatus("Could not copy text.", "error", 3000);
- 
+        }
+    });
+
+    // Initialize Feather Icons
+    feather.replace();
+});
+</script>
+
+</body>
+</html>
