--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ document.addEventListener('DOMContentLoaded', () => {
     
     // --- API Call ---
     async function callSecureGeminiViaMake(prompt, base64File) {
-        const webhookUrl = "https://hook.us2.make.com/fbpv4vhqqtyc5ixjl8d2c6cmhio3jiun";
+        const webhookUrl = "mnh6zivzouav9ojmqep5lwgnxb69ofy6@hook.us2.make.com";
         const response = await fetch(webhookUrl, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
