--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ async function callGeminiAPI(prompt, base64File) {
     }
 
     // --- DOM Population Functions ---
-    function populateCalendarLinks(allLinksData) {
+    (function populateCalendarLinks(allLinksData) {
         calendarLinksEl.innerHTML = '';
         if (!allLinksData || allLinksData.length === 0) {
             calendarLinksEl.innerHTML = '<p class="text-gray-500">No calendar events to display.</p>';
