--- a/index.html
+++ b/index.html
@@ -627,11 +627,13 @@ Signature: Include a note that "This was prepared with the help of my trusty AI 
 Style Notes:
 Use em dashes instead of colons for a more conversational feel
 Include appropriate emojis sparingly (celebration, home, calendar)
+...
 Keep paragraphs short and readable
 Avoid overly formal real estate speak
 Make it feel like it was written BY a person, not by a system
 Sample Opening Lines to Emulate: "I'm so excited we got this locked in for you..." "What a fantastic milestone we've reached together..." "I couldn't be happier about how this came together..." "This is exactly what we were working toward – and we did it!"
-Generate the email using the provided contract details and timeline, maintaining this warm, professional, and celebratory tone throughout.
+Generate the email using the provided contract details and timeline, maintaining this warm, professional, and celebratory tone throughout.`;
+
 
 
             showStatus("Sending to AI Nathalie... (This may take a moment)", "info");
