--- a/index.html
+++ b/index.html
@@ -594,44 +594,22 @@ async function callGeminiAPI(prompt, base64File) {
 
             showStatus("Converting file for analysis...", "info");
             const base64File = await fileToBase64(file);
+const prompt = `Please analyze the provided real estate contract PDF. Extract the following information and return it ONLY as a valid JSON object. Do not add any text or explanation outside of the JSON structure.
 
-            const prompt = `Data Input Format: This prompt expects to receive contract data in the following JSON format:
+The JSON object should have this exact structure:
 {
-  "propertyAddress": "123 Main St, Anytown, ST 12345",
-  "specialTerms": "Brief note about any non-standard contract terms, contingencies, or special conditions that differ from a typical purchase agreement. Leave empty if standard contract.",
+  "propertyAddress": "The full property address, including city, state, and zip code.",
+  "purchasePrice": "The final purchase price as a number, without currency symbols or commas.",
+  "specialTerms": "A brief summary of any non-standard terms, contingencies (like 'subject to seller finding suitable housing'), or important addenda. If none, leave this as an empty string.",
   "keyDates": [
     {
-      "name": "Event Name", 
-      "date": "YYYY-MM-DD"
+      "name": "Name of the event or deadline (e.g., 'Mortgage Commitment Deadline', 'Inspection Deadline', 'Closing Date')",
+      "date": "The date for the event in YYYY-MM-DD format."
     }
   ]
 }
-Tone & Style Instructions: Write an enthusiastic, warm, and personal email celebrating that the client's property is now under contract. The tone should feel like a friend sharing exciting news - genuine excitement without being overly formal or robotic. Use conversational language that builds confidence and trust.
-Output Requirements: Generate a complete email in HTML. Do not return JSON - return the actual email content ready to send.
-Email Structure:
-Subject Line: "🎉 WE DID IT! [Property Address] is Under Contract!"
-Opening: Start with genuine excitement and a personal touch. Acknowledge this milestone moment and make them feel like they've achieved something significant together as a team.
-Body Content:
-Express authentic enthusiasm about getting the deal done
-Use "we" language to emphasize partnership
-Present contract details in a clean, scannable format without excessive legal jargon
-Focus on the key dates they need to know, positioned as "here's what happens next"
-Include a reassuring statement about being there to guide them through each step
-Key Information to Include:
-Use propertyAddress from the JSON data
-If specialTerms contains information, include a brief mention of any non-standard contract elements (e.g., "Note: This contract includes a rent-back provision" or "FYI: We negotiated an extended inspection period")
-Format keyDates as a clean timeline, converting dates to readable format (e.g., "December 4, 2025")
-Identify and highlight the most critical upcoming deadlines
-Closing: End with warmth, accessibility, and forward momentum. Remind them you're their advocate and partner in this process.
-Signature: Include a note that "This was prepared with the help of my trusty AI assistant.  Make sure you refer to the original document for detailed information.”
-Style Notes:
-Use em dashes instead of colons for a more conversational feel
-Include appropriate emojis sparingly (celebration, home, calendar)
-...
-Keep paragraphs short and readable
-Avoid overly formal real estate speak
-Make it feel like it was written BY a person, not by a system
-Sample Opening Lines to Emulate: "I'm so excited we got this locked in for you..." "What a fantastic milestone we've reached together..." "I couldn't be happier about how this came together..." "This is exactly what we were working toward – and we did it!"
+
+Ensure all dates are in YYYY-MM-DD format. Extract all critical dates and deadlines mentioned in the contract.`;n't be happier about how this came together..." "This is exactly what we were working toward – and we did it!"
 Generate the email using the provided contract details and timeline, maintaining this warm, professional, and celebratory tone throughout.`;
 
 
@@ -656,27 +634,31 @@ try {
     return;
 }
 
-const keyDates = Array.isArray(contractData.keyDates) ? contractData.keyDates : [];
-const finalPropertyAddress = contractData.propertyAddress || clientInfo.propertyAddressOptional || 'N/A';
+// --- DATA HANDLING AND DISPLAY ---
+            const finalPropertyAddress = contractData.propertyAddress || clientInfo.propertyAddressOptional || "The Property";
+            const keyDates = Array.isArray(contractData.keyDates) ? contractData.keyDates : [];
+            const specialTermsText = contractData.specialTerms || '';
+            const purchasePrice = contractData.purchasePrice ?
+                new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD' }).format(contractData.purchasePrice) :
+                'the agreed-upon price';
 
-displayPropertyAddressEl.textContent = finalPropertyAddress;
-const specialTermsText = contractData.specialTerms || '';
-displayContractSummaryEl.textContent = specialTermsText ? 
-    `Special terms: ${specialTermsText}` : 
-    'Standard contract terms apply';
+            // Populate the "Extracted Information" card
+            displayPropertyAddressEl.textContent = finalPropertyAddress;
+            displaySpecialTermsEl.textContent = specialTermsText || 'Standard contract terms apply.';
 
-            keyDatesTableBodyEl.innerHTML = '';
+            keyDatesTableBodyEl.innerHTML = ''; // Clear previous results
             if (keyDates.length) {
                 keyDates.forEach(kd => {
                     const row = keyDatesTableBodyEl.insertRow();
                     row.insertCell().textContent = kd.name;
                     try {
                         const dateCell = row.insertCell();
+                        // Format date nicely for the table
                         dateCell.textContent = new Date(kd.date + 'T00:00:00Z').toLocaleDateString('en-US', {
                             year: 'numeric', month: 'long', day: 'numeric', timeZone: 'UTC'
                         });
                     } catch {
-                        row.insertCell().textContent = kd.date; // Fallback if date is invalid
+                        row.insertCell().textContent = kd.date || 'Invalid Date'; // Fallback
                     }
                 });
             } else {
@@ -686,10 +668,34 @@ displayContractSummaryEl.textContent = specialTermsText ?
                 cell.textContent = 'No key dates were extracted from the contract.';
             }
 
-            emailPreviewEl.innerHTML = aiResponseText; //
+            // --- GENERATE THE HTML EMAIL ---
+            let keyDatesHtml = keyDates.map(kd => {
+                const formattedDate = new Date(kd.date + 'T00:00:00Z').toLocaleDateString('en-US', {
+                    year: 'numeric', month: 'long', day: 'numeric', timeZone: 'UTC'
+                });
+                return `<li><strong>${kd.name}:</strong> ${formattedDate}</li>`;
+            }).join('');
+
+            const emailSubject = `🎉 WE DID IT! ${finalPropertyAddress} is Under Contract!`;
+            const emailBody = `
+                <p>Hi ${clientInfo.clientNames},</p>
+                <p>I'm absolutely thrilled to share some fantastic news – we got your offer accepted on ${finalPropertyAddress}! 🎉 This is such a huge milestone, and I couldn't be happier for you. We've been working toward this, and it's amazing to see it all come together!</p>
+                <p>We locked in a purchase price of <strong>${purchasePrice}</strong>, and here’s a quick rundown of the key dates we’ve got coming up:</p>
+                <ul>${keyDatesHtml}</ul>
+                ${specialTermsText ? `<p><strong>FYI:</strong> This contract includes a contingency that it's ${specialTermsText.toLowerCase()}</p>` : ''}
+                <p>I'll be here to guide you through each step of this exciting journey, so please don't hesitate to reach out if you have any questions – big or small. I’m here to support you!</p>
+                <p>Warmly,</p>
+                <p>${clientInfo.agentName}</p>
+                <br>
+                <p><em><small>This was prepared with the help of my trusty AI assistant. Make sure you refer to the original document for detailed information.</small></em></p>
+            `;
+
+            // Display the email in the preview box
+            emailPreviewEl.innerHTML = `<strong>Subject: ${emailSubject}</strong><hr class="my-2">${emailBody}`;
+            
+            // --- GENERATE CALENDAR LINKS ---
             const allCalendarLinks = calendarUtils.generateAllCalendarLinks(keyDates, finalPropertyAddress);
             populateCalendarLinks(allCalendarLinks);
-
             resultsAreaEl.classList.remove('hidden');
             showStatus("✅ Analysis complete!", "success", 4000);
 
